--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 alembic==1.7.5
 aniso8601==9.0.1
+astroid==2.9.3
 autopep8==1.6.0
 certifi==2021.10.8
 cffi==1.15.0
@@ -17,14 +18,19 @@ Flask-WTF==1.0.0
 greenlet==1.1.2
 gunicorn==20.1.0
 idna==3.3
+isort==5.10.1
 itsdangerous==2.0.1
 Jinja2==3.0.3
+lazy-object-proxy==1.7.1
 Mako==1.1.6
 MarkupSafe==2.0.1
 marshmallow==3.14.1
 marshmallow-sqlalchemy==0.27.0
+mccabe==0.6.1
+platformdirs==2.4.1
 pycodestyle==2.8.0
 pycparser==2.21
+pylint==2.12.2
 PyMySQL==1.0.2
 python-dotenv==0.19.2
 pytz==2021.3
@@ -33,7 +39,9 @@ six==1.16.0
 SQLAlchemy==1.4.29
 SQLAlchemy-Utils==0.38.2
 toml==0.10.2
+typing-extensions==4.0.1
 urllib3==1.26.8
 Werkzeug==2.0.2
+wrapt==1.13.3
 WTForms==3.0.1
 WTForms-SQLAlchemy==0.3
