--- a/requirements.txt
+++ b/requirements.txt
@@ -6,8 +6,11 @@ certifi==2021.10.8
 cffi==1.15.0
 charset-normalizer==2.0.10
 click==8.0.3
+coverage==6.2
+coveralls==3.3.1
 cryptography==36.0.1
 dnspython==2.1.0
+docopt==0.6.2
 email-validator==1.1.3
 Flask==2.0.2
 flask-marshmallow==0.14.0
