--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ install:
   - pip install -r requirements.txt
 
 script:
-  - pylint department_app
+ # - pylint department_app
   - coverage run unit_tests_run.py
   - coverage report
 
